--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,94 @@
-aiogram
-pandas
-httplib2
-google_auth_httplib2
-aiogoogle
-api_client
+aiofiles==22.1.0
+aiogoogle==4.3.0
+aiogram==2.22.2
+aiohttp==3.8.3
+aiosignal==1.2.0
+altgraph==0.17.3
+api-client==1.3.1
+apiclient==1.0.4
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.1.0
+Babel==2.9.1
+beautifulsoup4==4.11.1
+cachetools==5.2.0
+certifi==2022.5.18.1
+cffi==1.15.1
+charset-normalizer==2.0.12
+chromedriver-binary==107.0.5304.18.0
+click==8.1.3
+colorama==0.4.5
+Django==2.2
+exceptiongroup==1.0.0rc9
+Flask==2.2.2
+frozenlist==1.3.1
+future==0.18.2
 google-api-core==2.10.1
 google-api-python-client==2.64.0
 google-auth==2.12.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.3
 googleapis-common-protos==1.56.4
-keyboard==0.13.5
 h11==0.14.0
-aiofiles==22.1.0
+httplib2==0.20.4
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+keyboard==0.13.5
+MarkupSafe==2.1.1
+MouseInfo==0.1.3
+multidict==6.0.2
+numpy==1.23.3
+oauth2client==4.1.3
+oauthlib==3.2.1
+opencv-contrib-python==4.6.0.66
+outcome==1.2.0
+pandas==1.5.0
+pefile==2022.5.30
+Pillow==9.3.0
+protobuf==4.21.7
+psutil==5.9.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pycparser==2.21
+pygame==2.1.2
+PyGetWindow==0.0.9
+pyinstaller==5.6.2
+pyinstaller-hooks-contrib==2022.12
+PyMsgBox==1.0.9
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+PyRect==0.2.0
+PyScreeze==0.1.28
+PySocks==1.7.1
+pytelebot==0.0.1
+pyTelegramBotAPI==4.5.1
+python-dateutil==2.8.2
+pytweening==1.0.4
+pytz==2022.4
+pywhatkit==5.4
+pywin32-ctypes==0.2.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
+selenium==4.5.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
+telebot==0.0.4
+tenacity==8.1.0
+tonyg-rfc3339==0.1
+trio==0.22.0
+trio-websocket==0.9.2
+uritemplate==4.1.1
+urllib3==1.26.9
+Werkzeug==2.2.2
+wikipedia==1.4.0
+wsproto==1.2.0
+yarl==1.8.1
